validated and working on local
