# controllers/plant.js
@@ -10,6 +10,10 @@ const getData = async (req, res, next) => {
 };
 
 const getPlant = async (req, res) => {
+  try {
+  if (!ObjectId.isValid(req.params.id)) {
+    res.status(400).json('Unabe to find a plant with that Id.');
+  }
   const userId = new ObjectId(req.params.id);
   const result = await mongodb
     .getDb()
@@ -21,9 +25,14 @@ const getPlant = async (req, res) => {
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(lists[0]);
   });
+}catch(err){
+    res.status(500).json(result.error || 'Some error occurred while adding the plant.');
+    return;
+  }
 };
 
 const addPlant = async (req, res) => {
+  try {
   const Plant = {
     commonName: req.body.commonName,
       localName: req.body.localName,
@@ -34,26 +43,37 @@ const addPlant = async (req, res) => {
       isEdible: req.body.isEdible,
       scientificName: req.body.scientificName
   }
-  try {
+  
   const result = await mongodb.getDb().db('cse341-project2').collection('plant-collection').insertOne(Plant);
   res.status(201).json(result)
   } catch(err){
-    res.status(500).json(result.error || 'Some error occurred while creating the contact.');
+    res.status(500).json(result.error || 'Some error occurred while adding the plant.');
+    return;
   }
 }
 
 
 const remPlant = async (req, res) => {
   try{
-    const userId = new ObjectId(req.params.id);
-    const result = await mongodb.getDb().db('cse341-project2').collection('plant-collection').deleteOne({ 'commonName' : req.body.commonName} );
+  if (!ObjectId.isValid(req.params.id)) {
+    res.status(400).json('Unable to find a plant with that Id');
+    return;
+  }
+    const plantId = new ObjectId(req.params.id);
+    const result = await mongodb.getDb().db('cse341-project2').collection('plant-collection').deleteOne({ _id: plantId } );
     res.status(200).json(result);
   } catch(err){
-    res.status(500).json(err || 'Error while removing contact')
+    res.status(500).json(err || 'Error while removing plant');
+    return;
   }
 };
+
 const modifyPlant = async (req, res) => {
-  try {
+   try {
+  if (!ObjectId.isValid(req.params.id)) {
+    res.status(400).json('Unable to find a plant with that Id');
+    return;
+  }
     const Plant = {
       commonName: req.body.commonName,
       localName: req.body.localName,
@@ -64,11 +84,12 @@ const modifyPlant = async (req, res) => {
       isEdible: req.body.isEdible,
       scientificName: req.body.scientificName
     }
-    const userId = new ObjectId(req.params.id);
-    const result = await mongodb.getDb().db('cse341-project2').collection('plant-collection').updateOne({ _id: userId }, {$set: { isEdible: req.body.isEdible}});
+    const plantId = new ObjectId(req.params.id);
+    const result = await mongodb.getDb().db('cse341-project2').collection('plant-collection').updateOne({ _id: plantId }, {$set: { isEdible: req.body.isEdible}});
     res.status(204).json(result);
 } catch(err) {
-  res.status(500).json(err || `Error While updating contact with Id ${userId}`)
+  res.status(500).json(err || `Error While updating plant with Id ${plantId}`)
+  return;
 }
 }
 
